--- a/src/main/resources/templates/posts/index.html
+++ b/src/main/resources/templates/posts/index.html
@@ -2,10 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="ja">
 <head>
   <meta charset="UTF-8">
-  <title>FirstApp</title>
+  <title>AjaxApp</title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/style.css}">
+  <script th:src="@{/js/memo.js}"></script>
 </head>
 <body>
+    <h1>AjaxApp</h1>
+
+  <form th:action="@{/posts}" method="post" th:object="${postForm}" id="form">
+    <input type="text" th:field="*{content}"/>
+    <input type="submit" value="投稿する" id="submit"/>
+  </form>
+
+  <div id="list">
+  </div>
   <h1>トップページ</h1>
   <a th:href="@{/postForm}">新規投稿</a>
   <div th:each="post : ${postList}">
@@ -18,5 +28,6 @@
       </div>
     </div>
   </div>
+
 </body>
 </html>
